--- a/src/main/resources/static/css/layout1.css
+++ b/src/main/resources/static/css/layout1.css
@@ -1,33 +1,26 @@
-html {
-    position: relative;
-    min-height: 100%;
+html, body {
+    height: 100%;
     margin: 0;
-}
-body {
-    min-height: 100%;
 }
 
 #body-wrapper {
-    min-height: 100%;
+    min-height: 100vh;
     position: relative;
 }
 
 #body-content {
     margin-top: 100px;
-    padding-bottom: 99999px; /* footer의 높이 */
+    padding-bottom: 100px; /* footer 높이에 따라 조정 */
 }
 
 .footer {
     width: 100%;
-    height: 99999px; /* footer의 높이 */
+    height: 100px; /* footer의 적당한 높이 */
     position: absolute;
     bottom: 0;
     left: 0;
     text-align: center;
 }
-.content{
-    margin-bottom: 100px;
-    margin-top: 50px;
-    margin-left: 200px;
-    margin-right: 200px;
+.content {
+    margin: 50px 200px 100px 200px;
 }
