--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layouts/layout1}">
 
 <!-- 사용자 CSS 추가 -->
-<th:block layout:fragment="css">
+<th:block layout:fragment="content">
     <style>
         .carousel-inner > .item {
             height: 350px;
@@ -44,7 +44,7 @@
 
     <input type="hidden" name="searchQuery" th:value="${itemSearchDto.searchQuery}">
     <div th:if="${not #strings.isEmpty(itemSearchDto.searchQuery)}" class="center">
-        <p class="h3 font-weight-bold" th:text="${itemSearchDto.searchQuery} + '검색 결과'"></p>
+        <p class="h3 font-weight-bold" th:text="${itemSearchDto.searchQuery} + ' 검색 결과'"></p>
     </div>
 
     <div class="row">
